// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-dkPtyc WuVIR"
>
  <div
    className="sc-eCImvq hoErii"
  >
    <span
      className="sc-jRQAMF"
    >
      0
    </span>
    <span
      className="sc-gKckTs kFgRSx"
    >
      42
    </span>
  </div>
  <button
    className="sc-bdvvaa sc-gsDJrp ilmKZo bHbRuQ"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-dkPtyc WuVIR"
>
  <div
    className="sc-hKwCoD hbqQUV"
  >
    🛌🛌
  </div>
  <button
    className="sc-bdvvaa sc-gsDJrp jIMkcL bHbRuQ"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-dkPtyc WuVIR"
>
  <div
    className="sc-hKwCoD hbqQUV"
  >
    🍅
  </div>
  <button
    className="sc-bdvvaa sc-gsDJrp jIMkcL bHbRuQ"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-dkPtyc WuVIR"
>
  <div
    className="sc-hKwCoD hbqQUV"
  >
    🛌
  </div>
  <button
    className="sc-bdvvaa sc-gsDJrp jIMkcL bHbRuQ"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
